crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_alerts.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..66
  BLOCK_QUOTE@0..66
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    ALERT@2..66
      ALERT_MARKER@2..8 "[!TIP]"
      NEWLINE@8..9 "\n"
      BLOCK_QUOTE_MARKER@9..10 ">"
      WHITESPACE@10..11 " "
      PARAGRAPH@11..66
        TEXT@11..65 "Helpful advice for do ..."
        NEWLINE@65..66 "\n"
