crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_all_punctuation_escapes_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..65
  PARAGRAPH@0..65
    ESCAPED_CHAR@0..2 "\\!"
    ESCAPED_CHAR@2..4 "\\\""
    ESCAPED_CHAR@4..6 "\\#"
    ESCAPED_CHAR@6..8 "\\$"
    ESCAPED_CHAR@8..10 "\\%"
    ESCAPED_CHAR@10..12 "\\&"
    ESCAPED_CHAR@12..14 "\\'"
    ESCAPED_CHAR@14..16 "\\("
    ESCAPED_CHAR@16..18 "\\)"
    ESCAPED_CHAR@18..20 "\\*"
    ESCAPED_CHAR@20..22 "\\+"
    ESCAPED_CHAR@22..24 "\\,"
    ESCAPED_CHAR@24..26 "\\-"
    ESCAPED_CHAR@26..28 "\\."
    ESCAPED_CHAR@28..30 "\\/"
    ESCAPED_CHAR@30..32 "\\:"
    ESCAPED_CHAR@32..34 "\\;"
    ESCAPED_CHAR@34..36 "\\<"
    ESCAPED_CHAR@36..38 "\\="
    ESCAPED_CHAR@38..40 "\\>"
    ESCAPED_CHAR@40..42 "\\?"
    ESCAPED_CHAR@42..44 "\\@"
    ESCAPED_CHAR@44..46 "\\["
    ESCAPED_CHAR@46..48 "\\\\"
    ESCAPED_CHAR@48..50 "\\]"
    ESCAPED_CHAR@50..52 "\\^"
    ESCAPED_CHAR@52..54 "\\_"
    ESCAPED_CHAR@54..56 "\\`"
    ESCAPED_CHAR@56..58 "\\{"
    ESCAPED_CHAR@58..60 "\\|"
    ESCAPED_CHAR@60..62 "\\}"
    ESCAPED_CHAR@62..64 "\\~"
    NEWLINE@64..65 "\n"
