crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_atx_empty_with_closing_fence.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..14
  HEADING@0..4
    ATX_HEADING_MARKER@0..2
      ATX_HEADING_MARKER@0..2 "##"
    WHITESPACE@2..3 " "
    HEADING_CONTENT@3..3
    NEWLINE@3..4 "\n"
  HEADING@4..6
    ATX_HEADING_MARKER@4..5
      ATX_HEADING_MARKER@4..5 "#"
    HEADING_CONTENT@5..5
    NEWLINE@5..6 "\n"
  HEADING@6..14
    ATX_HEADING_MARKER@6..9
      ATX_HEADING_MARKER@6..9 "###"
    WHITESPACE@9..10 " "
    HEADING_CONTENT@10..10
    ATX_HEADING_MARKER@10..13 "###"
    NEWLINE@13..14 "\n"
