crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_atx_interrupts_lazy_blockquote_paragraph_no_blank_before_header.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..14
  BLOCK_QUOTE@0..7
    BLOCK_QUOTE_MARKER@0..1 ">"
    WHITESPACE@1..2 " "
    PARAGRAPH@2..7
      TEXT@2..6 "para"
      NEWLINE@6..7 "\n"
  HEADING@7..14
    ATX_HEADING_MARKER@7..8
      ATX_HEADING_MARKER@7..8 "#"
    WHITESPACE@8..9 " "
    HEADING_CONTENT@9..13
      TEXT@9..13 "head"
    NEWLINE@13..14 "\n"
