crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_atx_interrupts_paragraph_multimarkdown.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
expression: cst_output
---
DOCUMENT@0..22
  PARAGRAPH@0..8
    TEXT@0..7 "Foo bar"
    NEWLINE@7..8 "\n"
  HEADING@8..14
    ATX_HEADING_MARKER@8..9
      ATX_HEADING_MARKER@8..9 "#"
    WHITESPACE@9..10 " "
    HEADING_CONTENT@10..13
      TEXT@10..13 "baz"
    NEWLINE@13..14 "\n"
  PARAGRAPH@14..22
    TEXT@14..21 "Bar foo"
    NEWLINE@21..22 "\n"
