crates/panache-parser/tests/snapshots/golden_parser_cases__parser_cst_atx_interrupts_reduced_marker_lazy_blockquote_commonmark.snap
---
source: crates/panache-parser/tests/golden_parser_cases.rs
assertion_line: 99
expression: cst_output
---
DOCUMENT@0..17
  BLOCK_QUOTE@0..17
    BLOCK_QUOTE_MARKER@0..1 ">"
    BLOCK_QUOTE@1..8
      BLOCK_QUOTE_MARKER@1..2 ">"
      WHITESPACE@2..3 " "
      PARAGRAPH@3..8
        TEXT@3..7 "para"
        NEWLINE@7..8 "\n"
    BLOCK_QUOTE_MARKER@8..9 ">"
    WHITESPACE@9..10 " "
    HEADING@10..17
      ATX_HEADING_MARKER@10..11
        ATX_HEADING_MARKER@10..11 "#"
      WHITESPACE@11..12 " "
      HEADING_CONTENT@12..16
        TEXT@12..16 "head"
      NEWLINE@16..17 "\n"
